# real_time_ray_tracing_v2

./: .gitignore  CMakeLists.txt  README.md  architecture-classes.puml  main.cpp
architecture/: generate_diagrams.sh
architecture/diagrams/: 01_overview.puml  02_engine.puml  03_scene_cpu.puml  04_renderer_facade_di.puml  05_shared_vulkan.puml  06_raster_backend.puml  07_ray_tracing_backend.puml  10_flow_startup.puml  11_flow_frame_loop.puml  12_flow_draw.puml  13_flow_load_scene.puml  14_flow_record_raster.puml  15_flow_record_rt.puml  99_full_reference.puml  README.md
models/: generate_textured_quad.ps1  textured_quad.gltf
models/duck/: Duck.gltf
scenes/: graphics_test.json  stress_test.json  test_scene.json
shaders/raster/: default.slang  shadow.slang
shaders/ray_tracing/: default.slang  no_texture_sampling.slang
src/engine/: benchmark.cpp  benchmark.hpp  benchmark_constants.hpp  camera.hpp  camera_animator.cpp  camera_animator.hpp  delta_time.hpp  engine.cpp  engine.hpp  input_controller.cpp  input_controller.hpp  window.cpp  window.hpp
src/renderer/raster/: device_config.hpp  raster_frame_recorder.cpp  raster_frame_recorder.hpp  raster_gpu_types.hpp  raster_pipeline.cpp  raster_pipeline.hpp  raster_render_backend.cpp  raster_render_backend.hpp  raster_scene_gpu_builder.cpp  raster_scene_gpu_builder.hpp  raster_scene_gpu_data.hpp  shader_config.hpp
src/renderer/ray_tracing/: blas_builder.cpp  blas_builder.hpp  device_config.hpp  rt_frame_recorder.cpp  rt_frame_recorder.hpp  rt_gpu_types.hpp  rt_pipeline.cpp  rt_pipeline.hpp  rt_render_backend.cpp  rt_render_backend.hpp  rt_scene_gpu_builder.cpp  rt_scene_gpu_builder.hpp  rt_scene_gpu_data.hpp  shader_config.hpp  tlas_builder.cpp  tlas_builder.hpp
src/renderer/shared/: device_config.hpp  device_context.cpp  device_context.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  render_backend.hpp  render_frame_recorder.hpp  renderer.cpp  renderer.hpp  scene_gpu_builder_base.hpp  scene_gpu_data.hpp  scene_payload.hpp  shader_module_util.cpp  shader_module_util.hpp  swapchain.cpp  swapchain.hpp  viewport_flip.hpp  vulkan_dynamic_dispatch.cpp
src/renderer/shared/buffers/: base_buffer.cpp  base_buffer.hpp  buffer_kind.hpp  gpu_buffer.cpp  gpu_buffer.hpp  host_visible_buffer.cpp  host_visible_buffer.hpp
src/renderer/shared/descriptors/: uniform_set.cpp  uniform_set.hpp
src/renderer/shared/textures/: texture_resource.cpp  texture_resource.hpp
src/scene/: camera.hpp  gltf_loader.cpp  gltf_loader.hpp  instanced_group.hpp  material.hpp  mesh.hpp  mesh_primitive.hpp  model.hpp  scene.hpp  scene_config.hpp  scene_loader.cpp  scene_loader.hpp  scene_registry.cpp  scene_registry.hpp  transform.hpp
src/scene/primitives/: cube.hpp  plane.hpp
src/util/: asset_location.hpp  asset_root.cpp  asset_root.hpp  path_io.hpp  shader_paths.hpp  vertex.hpp
tests/benchmarks/: StressTest_raster_2026-06-11T02-13-43.json  StressTest_raster_2026-06-11T02-14-43.json  StressTest_raster_2026-06-11T02-15-43.json  StressTest_rt_2026-06-11T02-19-20.json  StressTest_rt_2026-06-11T02-20-21.json  StressTest_rt_2026-06-11T02-21-21.json  StressTest_rt_2026-06-11T02-22-21.json  StressTest_rt_2026-06-11T02-23-21.json  StressTest_rt_2026-06-11T02-24-21.json  StressTest_rt_2026-06-11T02-25-21.json  StressTest_rt_2026-06-11T02-26-21.json  StressTest_rt_2026-06-11T02-27-21.json  StressTest_rt_2026-06-11T02-28-21.json  StressTest_rt_2026-06-11T02-29-21.json  StressTest_rt_2026-06-11T02-30-21.json  StressTest_rt_2026-06-11T02-31-21.json  StressTest_rt_2026-06-11T02-32-21.json  StressTest_rt_2026-06-11T02-33-21.json  StressTest_rt_2026-06-11T02-34-21.json  StressTest_rt_2026-06-11T02-35-21.json  StressTest_rt_2026-06-11T02-36-21.json  StressTest_rt_2026-06-11T02-37-21.json  StressTest_rt_2026-06-11T02-38-21.json  StressTest_rt_2026-06-11T02-44-48.json  StressTest_rt_2026-06-11T02-45-48.json  StressTest_rt_2026-06-11T02-46-48.json  StressTest_rt_2026-06-11T02-47-48.json  StressTest_rt_2026-06-11T02-48-48.json  StressTest_rt_2026-06-11T02-49-48.json  StressTest_rt_2026-06-11T02-50-48.json  StressTest_rt_2026-06-11T02-51-48.json  StressTest_rt_2026-06-11T02-52-48.json  StressTest_rt_2026-06-11T02-53-48.json  StressTest_rt_2026-06-11T02-54-48.json  StressTest_rt_2026-06-11T02-55-48.json  StressTest_rt_2026-06-11T02-56-48.json  StressTest_rt_2026-06-11T02-57-48.json  StressTest_rt_2026-06-11T02-58-48.json  StressTest_rt_2026-06-11T02-59-48.json  StressTest_rt_2026-06-11T03-00-48.json  (+23 more)
tests/benchmarks/aggregate/: aggregate_benchmarks.py  avg_fps.csv  fps_1_low.csv  fps_5_low.csv  verify_four_columns.py
